@@ -11,16 +11,16 @@ $def->properties['badword_id']->propertyName = 'badword_id';
 $def->properties['badword_id']->propertyType = ezcPersistentObjectProperty::PHP_TYPE_INT;
 
 
-$def->properties['substitution']               = new ezcPersistentObjectProperty();
-$def->properties['substitution']->columnName   = 'substitution';
-$def->properties['substitution']->propertyName = 'substitution';
-$def->properties['substitution']->propertyType = ezcPersistentObjectProperty::PHP_TYPE_STRING;
-
-
 $def->properties['word']               = new ezcPersistentObjectProperty();
 $def->properties['word']->columnName   = 'word';
 $def->properties['word']->propertyName = 'word';
 $def->properties['word']->propertyType = ezcPersistentObjectProperty::PHP_TYPE_STRING;
+
+
+$def->properties['substitution']               = new ezcPersistentObjectProperty();
+$def->properties['substitution']->columnName   = 'substitution';
+$def->properties['substitution']->propertyName = 'substitution';
+$def->properties['substitution']->propertyType = ezcPersistentObjectProperty::PHP_TYPE_STRING;
 
 return $def;
 
